--- a/API/package.json
+++ b/API/package.json
@@ -10,6 +10,7 @@
   "author": "Joel Austin",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mysql": "^2.16.0"
   }
 }
