--- a/API/package.json
+++ b/API/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "greenlock-express": "^2.6.7",
     "mysql": "^2.16.0"
   }
 }
