--- a/API/package.json
+++ b/API/package.json
@@ -10,6 +10,8 @@
   "author": "Joel Austin",
   "license": "ISC",
   "dependencies": {
+    "actions-on-google": "^2.5.0",
+    "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.16.4",
     "greenlock-express": "^2.6.7",
     "mysql": "^2.16.0"
