--- a/API/package.json
+++ b/API/package.json
@@ -14,6 +14,7 @@
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.16.4",
     "greenlock-express": "^2.6.7",
+    "morgan": "^1.9.1",
     "mysql": "^2.16.0"
   }
 }
