--- a/API/package.json
+++ b/API/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.16.4",
+    "forEachAsync": "^3.0.0",
     "greenlock-express": "^2.6.7",
     "helmet": "^3.15.1",
     "morgan": "^1.9.1",
