--- a/API/package.json
+++ b/API/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "actions-on-google": "^2.5.0",
+    "async": "^2.6.2",
     "body-parser": "^1.18.3",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.16.4",
