--- a/API/package.json
+++ b/API/package.json
@@ -13,6 +13,7 @@
     "actions-on-google": "^2.5.0",
     "async": "^2.6.2",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.16.4",
     "forEachAsync": "^3.0.0",
