--- a/Web/pitt-menu/package.json
+++ b/Web/pitt-menu/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.3",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-css-transition": "^0.7.4",
     "react-dom": "^16.8.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
