--- a/Web/pitt-menu/package.json
+++ b/Web/pitt-menu/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "^16.8.3",
     "react-addons-css-transition-group": "^15.6.2",
     "react-css-transition": "^0.7.4",
