--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,29 +1,17 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "chrome",
+
+            "type": "Chrome",
             "request": "launch",
-            "name": "Next: Chrome",
+            "name": "Launch Chrome against localhost",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}"
-        },
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Next: Node",
-            "runtimeExecutable": "next",
-            "runtimeArgs": [
-                "--inspect"
-            ],
-            "port": 9229,
-            "console": "integratedTerminal"
-        }
-    ],
-    "compounds": [
-        {
-            "name": "Next: Full",
-            "configurations": ["Next: Node", "Next: Chrome"]
+            "webRoot": "${workspaceFolder}",
+            "runtimeExecutable": "/opt/google/chrome/google-chrome"
         }
     ]
 }
