Overhauled Front End Web

--- a/API/package.json
+++ b/API/package.json
@@ -15,7 +15,9 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dialogflow-fulfillment": "^0.6.1",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "firebase": "^5.8.6",
     "forEachAsync": "^3.0.0",
     "greenlock-express": "^2.6.7",
     "helmet": "^3.15.1",
