--- a/Web/pitt-menu/package.json
+++ b/Web/pitt-menu/package.json
@@ -3,15 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^5.8.5",
-    "moment": "^2.24.0",
-    "react": "^16.8.3",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-css-transition": "^0.7.4",
-    "react-dom": "^16.8.3",
-    "react-router": "^4.3.1",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.8",
+    "semantic-ui-react": "^0.85.0"
   },
   "scripts": {
     "start": "react-scripts start",
