--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,12 @@
     "version": "0.2.0",
     "configurations": [
         {
-
-            "type": "Chrome",
+            "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
+            "name": "Launch Chrome",
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}",
-            "runtimeExecutable": "/opt/google/chrome/google-chrome"
+            "runtimeExecutable": "/usr/bin/google-chrome-stable"
         }
     ]
 }
