--- a/API/package.json
+++ b/API/package.json
@@ -4,7 +4,8 @@
   "description": "An API to facilitate the transaction of information between a database of menus and clientside applications",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node-dev index.js",
+    "debug": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Joel Austin",
@@ -13,15 +14,18 @@
     "actions-on-google": "^2.5.0",
     "async": "^2.6.2",
     "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.5",
     "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "firebase": "^5.8.6",
+    "firebase-admin": "^7.1.1",
     "forEachAsync": "^3.0.0",
     "greenlock-express": "^2.6.7",
     "helmet": "^3.15.1",
     "morgan": "^1.9.1",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "selenium-webdriver": "^4.0.0-alpha.1"
   }
 }
