--- a/Web/pitt-menu/package.json
+++ b/Web/pitt-menu/package.json
@@ -6,6 +6,7 @@
     "firebase": "^5.8.6",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "semantic-ui-react": "^0.85.0"
