--- a/Web/pitt-menu/package.json
+++ b/Web/pitt-menu/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.8.6",
+    "moment": "^2.24.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-semantic-toasts": "^0.5.0",
+    "react-toastify": "^5.0.0-rc.6",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0"
   },
   "scripts": {
