--- a/Web/pitt-menu/package.json
+++ b/Web/pitt-menu/package.json
@@ -13,7 +13,8 @@
     "react-semantic-toasts": "^0.5.0",
     "react-toastify": "^5.0.0-rc.6",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.85.0"
+    "semantic-ui-react": "^0.85.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
