--- a/Web/pitt-menu-ts/package.json
+++ b/Web/pitt-menu-ts/package.json
@@ -7,11 +7,16 @@
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-router": "^5.0.5",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/react-transition-group": "^4.2.2",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-transition-group": "^4.3.0",
     "typescript": "3.6.3"
   },
   "scripts": {
@@ -36,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-custom-scrollbars": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
     "eslint": "^6.4.0",
